# ssmarshal

./: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs
src/: lib.rs
tests/: roundtrip.rs
